assets/css/main.css
/** @format */

html {
  scroll-behavior: smooth;
}

body {
  background: #f8f9fa;
  color: #121212;
  font-family: Inter, Helvetica Neue, Helvetica, Arial, sans-serif;
  margin: 0;
}

nav {
  padding: 1.5%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  position: fixed;
  align-items: center;
  width: 100vw;
  background-color: #fefcff;
  box-shadow: rgb(0 0 0 / 20%) 0px 4px 8px 0px,
    rgb(0 0 0 / 19%) 0px 6px 20px 0px;
  top: 0;
  height: 10vh;
  z-index: 50;
}

.nav-buttons-container {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  width: 35vw;
}

.nav-buttons {
  font-size: 1.25em;
  padding: 2%;
  padding-left: 5%;
  padding-right: 5%;
  margin: 0;
}

.nav-buttons:hover {
  cursor: pointer;
}

.selected-nav-button {
  background-color: black;
  color: white;
  border-radius: 20vw;
  font-weight: 700;
  animation: fadeIn;
  animation-duration: 1s;
}

.profile-image {
  width: 20rem;
  object-fit: cover;
  border-radius: 10%;
  margin-right: 5%;
}

.welcome-page {
  min-height: 95vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  margin-bottom: 5vh;
  padding-top: 15vh;
}

.text-container {
  max-width: 40%;
}

.see-more-button {
  background-color: #ffffff;
  border-radius: 10%;
  border: none;
  padding: 2%;
}

.hello-text {
  margin-bottom: 0px;
  font-size: 5em;
  margin-bottom: 2%;
  font-weight: 800;
}

.aboutme-text {
  font-size: 1.5em;
}

.github-button {
  display: flex;
  align-items: center;
  justify-content: space-around;
  width: 10em;
}

.button-container {
  display: flex;
  flex-direction: row;
}

.linkedin-button {
  margin-left: 5%;
}

.hamburger-container {
  display: none;
  margin-right: 2%;
}

.overlay {
  display: none;
}

.menu-div {
  display: none;
}

.skills-page {
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin-bottom: 5vh;
}

.skills-name {
  margin-top: 1%;
  font-weight: 500;
  font-size: 1rem;
}

.title-text {
  font-weight: 800;
  font-size: 3rem;
  margin-bottom: 5vh;
}

.languages-container {
  text-align: center;
  margin-bottom: 5vh;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  padding: 2vmax;
  background-color: white;
  box-shadow: rgb(0 0 0 / 20%) 0px 4px 8px 0px,
    rgb(0 0 0 / 19%) 0px 6px 20px 0px;
  border-radius: 20px;
}

.skill-icon {
  font-size: 3rem;
  height: 3rem;
}

.skill-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 4.5rem;
}

.skills-container {
  display: flex;
  width: 70vmin;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}

.projects-page {
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin-bottom: 5vh;
}

.projects-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100vw;
  justify-content: space-evenly;
  align-items: center;
}

.project-container {
  border-radius: 20px;
  width: 40vmax;
  border: 1px solid black;
  box-shadow: rgb(0 0 0 / 20%) 0px 4px 8px 0px,
    rgb(0 0 0 / 19%) 0px 6px 20px 0px;
  margin-top: 5vh;
}

.project-image {
  width: 39.9vmax;
  height: 40vh;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
  object-fit: cover;
}

.project-text {
  padding: 5%;
}

.scroll-correct {
  padding-top: 15vh;
    margin-top: -15vh;
}

hr {
  width: 111.1%;
  transform: translateX(-5%);
  color: black;
  height: 1px;
  background-color: black;
  opacity: 1;
}

.progress-container {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 2px;
  background: #ccc;
}

/* The progress bar (scroll indicator) */
.progress-bar {
  height: 2px;
  background: black;
  width: 0%;
}

/* Mobile */
@media (max-width: 1000px) {
  .welcome-page {
    flex-direction: column;
    justify-content: center;
  }

  .text-container {
    max-width: 75%;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .hello-text {
    font-size: 3em;
    text-align: center;
  }

  .aboutme-text {
    font-size: 1em;
    text-align: center;
    max-width: 25em;
  }

  .profile-image {
    width: 20rem;
    margin-bottom: 5%;
    margin-right: 0;
  }

  .button-container {
    width: 100%;
    align-items: center;
    justify-content: center;
  }

  .nav-buttons-container {
    display: none;
  }

  .hamburger-container {
    display: block;
  }

  .menu-div {
    position: fixed;
    display: block;
    overflow: auto;
    height: 100%;
    width: 50vw;
    right: 0px;
    top: 0px;
    z-index: 100;
    padding: 5vw 15vw;
    backdrop-filter: blur(6vw);
    -webkit-backdrop-filter: blur(6vw);
    background-color: rgba(224, 224, 224, 0.457);
    box-shadow: rgb(0 0 0 / 20%) 0px 4px 8px 0px,
      rgb(0 0 0 / 19%) 0px 6px 20px 0px;
    transform: translateX(100vw);
  }
  .overlay {
    background-color: rgba(255, 255, 255, 0.475);
    position: fixed;
    height: 150%;
    width: 150%;
    top: 0px;
    display: contents;
  }

  .menu-button-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .menu-button {
    width: 35vw;
    margin: 2vw;
    font-size: 1.25em;
  }

  .project-container {
    width: 45.5vmax;
  }

  .project-image {
    width: 45.25vmax;
  }
}

/* Animations */
@keyframes moverightmenu {
  from {
    transform: translateX(100vw);
    transform-origin: right;
  }

  to {
    transform: translateX(0);
    transform-origin: right;
  }
}
@keyframes movebackmenu {
  from {
    transform: translateX(0);
    transform-origin: right;
  }

  to {
    transform: translateX(100vw);
    transform-origin: right;
  }
}

/* Footer */
a {
  -webkit-transition: 0.3s all ease;
  -o-transition: 0.3s all ease;
  transition: 0.3s all ease;
}

a,
a:hover {
  text-decoration: none !important;
}

.footer-16371 {
  padding: 7rem 0;
  font-family: "Poppins", sans-serif;
  background-color: white;
}

.footer-16371 .footer-site-logo {
  text-align: center;
  font-size: 2rem;
  font-weight: 900;
}

.footer-16371 .footer-site-logo a {
  color: black;
}

.footer-16371 .nav-links {
  padding: 0;
  margin: 0;
}

.footer-16371 .nav-links li {
  display: inline-block;
}

.footer-16371 .nav-links li a {
  padding: 10px;
  color: #000;
}

.footer-16371 .social h3 {
  font-weight: bold;
  font-size: 18px;
  color: #000;
}

.footer-16371 .social ul li {
  display: inline-block;
}

.footer-16371 .social ul li a {
  display: inline-block;
  padding: 10px;
}

.footer-16371 .social ul li.git a {
  color: rgb(0, 0, 0);
}
.footer-16371 .social ul li.git a {
  color: #0072b1;
}

.footer-16371 .social ul li.email a {
  color: #bb001b;
}

.footer-16371 .social ul li.tele a {
  color: #0088cc;
}

.footer-16371 .copyright {
  color: #999999;
}

